@@ -17,6 +17,8 @@ import h5py
 
 from bluepy.v2.impl.target import TargetContext
 from voxcell import CellCollection
+from brainbuilder.exceptions import BrainBuilderError
+
 
 L = logging.getLogger('brainbuilder')
 
@@ -28,7 +30,13 @@ def _add_me_info(cells, mecombo_info):
     mecombo_info = mecombo_info.set_index('combo_name')
 
     if 'me_combo' in cells.properties:
-        mecombo_params = mecombo_info.loc[cells.properties['me_combo']]
+        me_combos = cells.properties['me_combo']
+        missing_me_combos = me_combos[mecombo_info.index.get_indexer(me_combos) == -1]
+        if len(missing_me_combos) != 0:
+            raise BrainBuilderError(f"The me_combo :{missing_me_combos.tolist()} are missing from "
+                                    f"the e-model release")
+
+        mecombo_params = mecombo_info.loc[me_combos]
         for prop, column in mecombo_params.iteritems():
             values = column.values
             if prop == 'emodel':
